# RSPrintManager

./: Cargo.toml  README.md  rustfmt.toml
bindings/: Request.ts  Response.ts
src/: command.rs  config.rs  lib.rs  main.rs  printing.rs  ws.rs
src/api/: request.rs  response.rs
src/command/: command.rs  mod.rs  types.rs
src/printing/: mod.rs  models.rs  printer.rs  printers.rs  utils.rs
src/ui/: tray.rs
src/ws/: handler.rs  mod.rs  result.rs  send_json.rs
ts/: package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
ts/src/: main.ts
