[package]
name = "rspm"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.48.0", features = ["macros","rt-multi-thread"]}
tokio-tungstenite = "*"
printers = "2.2.1"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive", "std"] }
serde_json = "1.0.145"
tray-icon = "0.21.2"
image = "0.25.9"
async-trait = "0.1.89"
