[package]
name = "rspm"
version = "0.1.0"
edition = "2024"
authors = ["Felix Coulthard"]
repository = "https://github.com/idkfelix/RSPrintManager"

[[bin]]
name = "RSPrintManager"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
tokio = {version = "1.48.0", features = ["macros","rt-multi-thread"]}
serde = { version = "1.0.228", features = ["derive", "std"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
serde_json = "1.0.145"
tray-icon = "0.21.2"
printers = "2.2.1"
image = "0.25.9"
ts-rs = "11.1.0"
